src/index.css
/* Import fonts */
@import "poppins.css";
@import "inter.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
	box-sizing: border-box;
	-webkit-tap-highlight-color: transparent;
}

html {
	width: 100%;
	min-height: 100vh;
}
body, #__next {
	width: inherit;
	min-height: inherit;
	margin: 0;
	padding: 0;
}

.button {
	@apply inline-flex justify-center items-center px-4 py-2 text-base font-medium rounded-md border shadow-sm duration-200 font-inter focus:outline-none sm:text-sm;
}

.modal-overlay {
	@apply fixed inset-0 bg-gray-500/40 transition-opacity backdrop-blur-md
}

a {
	color: inherit;
	text-decoration: none;
}

.status-text a {
	@apply hover:underline text-orange-400
}

.bg-gradient-light {
	background: linear-gradient(115deg,transparent 0,transparent 20%,rgba(176, 148, 88, 0.1) 35%,rgba(230, 153, 9, 0.1) 70%,transparent 80%,transparent 100%)
}

.dark .bg-gradient-light {
	background: linear-gradient(115deg, rgba(0, 0, 0, 0) 0px, rgba(0, 0, 0, 0) 20%, rgba(101, 84, 48, 0.1) 35%, rgba(184, 122, 7, 0.1) 70%, rgba(0, 0, 0, 0) 80%, rgba(0, 0, 0, 0) 100%);
}

.dark .bg-dark {
	background-color: rgb(24 26 27 / 1) !important;
}

.no-scroll {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}
.no-scroll::-webkit-scrollbar {
  display: none; /* Chrome, Safari and Opera */
}

